--- a/assets/css/meyawo.css
+++ b/assets/css/meyawo.css
@@ -10685,6 +10685,7 @@ button.bg-dark:focus {
 
 .text-center {
   text-align: center !important;
+  font-size:x-large;
 }
 
 @media (min-width: 576px) {
